--- a/src/test/resources/configs.properties
+++ b/src/test/resources/configs.properties
@@ -3,3 +3,4 @@ hrm_url=http://dev-hrm.yoll.io/
 bestbuy_url=https://www.bestbuy.com/
 hrm_username=yoll-student
 hrm_password=Bottcamp5#
+iframes_url=https://practice.expandtesting.com/iframe
