Windows and tabs practice

--- a/src/test/resources/configs.properties
+++ b/src/test/resources/configs.properties
@@ -4,3 +4,4 @@ bestbuy_url=https://www.bestbuy.com/
 hrm_username=yoll-student
 hrm_password=Bottcamp5#
 iframes_url=https://practice.expandtesting.com/iframe
+demo_qa_windows_url=https://demoqa.com/browser-windows
