--- a/src/test/resources/configs.properties
+++ b/src/test/resources/configs.properties
@@ -2,6 +2,6 @@ browserType=chrome
 hrm_url=http://dev-hrm.yoll.io/
 bestbuy_url=https://www.bestbuy.com/
 hrm_username=yoll-student
-hrm_password=Bottcamp5#
+hrm_password=Bootcamp5#
 iframes_url=https://practice.expandtesting.com/iframe
 demo_qa_windows_url=https://demoqa.com/browser-windows
